--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,24 +1,20 @@
 <div class="row-fluid spaceless">
     <div class="span2">
-        <span class="heading color1">About</span>
+        <span class="heading color1">FAQ</span>
     </div>
 </div>
 <div id="about" class="row-fluid color2">
     <div class="span12">
-        <p>Deutschland spricht über die Energiewende, über nachhaltige Versorgung und darüber, wie wir unseren Energieverbrauch in Zukunft einschränken und Energie effizienter nutzen können.</p>
-        <p>Mit dem Hackday “Energy Hacks” wollen wir einen Schritt in die Richtung dieser Zukunft gehen und uns überlegen, welche Geräte und Anwendungen uns dabei helfen könnten, effizienter mit Strom umzugehen und das abstrakte Thema Stromversorgung und die Infrastruktur Stromnetz besser verständlich und greifbar zu machen. Konkret: Wir wollen die Energiewende “hacken” und uns abseits theoretischer Diskussionen daran machen, Werkzeuge für die Zukunft zu bauen. <a id="readmore" href="#" title="">Weiterlesen</a></p>
-        <div id="more" class="js-hidden"><p>In Ländern wie den USA und <a href="http://fi.okfn.org/energy-hackathon-2013/" target="_blank">Finnland</a> hat man sich diesen Themen und Fragestellungen auf <a href="http://fi.okfn.org/energy-hackathon-2013/" target="_blank">Hackdays</a> und in <a href="http://appsforenergy.challenge.gov/" target="_blank">App-Wettbewerben</a> bereits angenommen und spannende Anwendungen und Tools für Verbraucher entwickelt. Auch in Deutschland ist es an der Zeit, sich auf kreative Weise mit dem Thema Stromversorgung und Verbrauch auseinanderzusetzen! Darum will “Energy Hacks” in Berlin Entwickler, Designer und Experten versammeln, um gemeinsam Anwendungen und Werkzeuge für die Energie der Zukunft zu entwickeln."Folgende Daten werden euch auf dem Hack day zur Verfügung stehen:</p>
-<ul class="bulletlist">
-<li>Aktuelle Daten zur Last und Erzeugung in Berlin (15-Mintenwerte je Bezirk)</li> 
-<li>Historische Lastgangdaten</li>
-<li>Durchschnittliche Verbrauchsdaten  (Standardlastprofile)</li>
-<li>Statistische Daten zu Bevölkerungszahl, Haushalten, Gewerben etc.</li>
-<li>Daten aus anderen europäischen Städten (z.B.  Hamburg und Helsinki)</li>
-<li>zur Verfügung stehen elektronische Zähler zum "Selbstablesen"</li>
-<li>weitere Datensätze folgen ... </li>
-</ul>
-<p>Für Anregungen und Ideen zu weiteren Datensätzen meldet euch bitte hier: julia.kloiber[at]okfn.org</p>
-<p>Partner des Hackdays sind die <a href="http://okfn.de/">Open Knowledge Foundation Deutschland</a>, der Stromnetzbetreiber <a href="http://www.stromnetz-berlin.de/de/index.htm">Stromnetz Berlin GmbH </a> (ehemals ehemals Vattenfall Europe Distribution Berlin GmbH), die Senatsverwaltung für Wirtschaft, Technologie und Forschung und das Projekt <a href="http://opencities.net/Berlin">Open Cities</a>.</p>
+        <h4>Will the toolkit have a specific focus?</h4>
+        <p>As there's already lots of open data around the aid sector, thanks to the <a href="http://iatistandard.org/">International Aid Transparency Initiative (IATI)</a> there will be an initial focus on curating already existing tools which use IATI data, creating training materials around them, and carrying out a scoping analysis to see if there are any gaps in tools, and if there are, creating open source, interoperable tools to fill these gaps. We'll be talking to potential users of aid data to see what features they would like to see, and how best to design the Toolkit hub around their needs. The outline of the project will be very iterative, based upon user responses and needs throughout the project lifetime. 
+        It's planned that in the future, other aspects of open development data will also be focused upon - election data, sanitation, or education data for example. 
+
+        <h4>How is the Open Development Toolkit funded?</h4>
+     	<p>Initial funding is 50% provided by the Open Knowledge Foundation, and 50% from Development Initiatives. We're looking for funds to develop the new tools, training material and carrying out workshops with groups of potential data users. If you're interested in finding out more, please get in touch with Zara Rahman, Project Lead, on zara.rahman@okfn.org </p>
+     	<br>
+     	<p>If you have any other questions, please don't hesitate to get in touch!</p>
+
+
 </div>
     </div>
 </div>
