--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -64,62 +64,24 @@
                                 <img src="/img/SB_logo1.png" alt="Stromnetz Berlin" />
                             </a>
                         </div>
-                        <div class="span6">
-                            <a href="http://opencities.net/Berlin">
-                                <img src="/img/OC_logo.png" alt="Open Cities" />
-                            </a>
-                            <a href="http://opencities.hackathome.com/">
-                                <img src="/img/tourism_logo.png" alt="Open Cities" />
-                            </a>
-                        </div>
-                    </div>
-                	<div class="row-fluid">
-                	   <h5>Hochschulpartner:</h5>
-                    </div>
-                    <div class="row-fluid">
-                        <div class="span4">
-                            <a href="http://www.fh-potsdam.de/">
-                                <img src="/img/fhp.png" alt="FH Potsdam" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row-fluid">
-                	   <h6>weitere Unterstützer:</h6>
-                    </div>
-                    <div class="row-fluid">
-                        <div class="span1">
-                            <a href="http://www.yetu.de/">
-                                <img src="/img/yetulogo.png" alt="YETU" />
-                            </a>
-                        </div>
-                         <div class="span2">
-                    <a href="http://www.greenhackathon.com/">
-                        <img src="/img/green_logo.png" alt="Greenhackathon" />
-                        </a>
-                        </div>
-                        <div class="span2">
-                    <a href="http://www.fritzing.org/">
-                        <img src="/img/fritzing.png" alt="Fritzing" />
-                        </a>
-                        </div>
-                    </div>
-                </div>
+                       
+                   
+                        
+                    
+                
                 <div class="span3 contact-area">
                     <p>
-                        <a href="mailto:{{ site.contact }}">Kontakt</a><br/>
-                        <a href="mailto:{{ site.contact }}">Sponsor werden</a><br/>
-                        <a href="{{ site.github }}">Auf Github forken</a>
+                        <a href="mailto:{{ site.contact }}">Contact</a><br/>
+                        <a href="mailto:{{ site.contact }}">Get involved/a><br/>
+                        <a href="{{ site.github }}">Fork on Github</a>
                     </p>
-                    <p>
-                        Impressum:<br/>
-                        Open Knowledge Foundation Deutschland e.V.<br/>
-                        Schlesische Str. 6, 10997 Berlin
-                    </p>
+                
                     <p>
                         Design:<br/>
                         <a href="http://rainbow-unicorn.com/">Rainbow-Unicorn.com</a><br/>
-                        Umsetzung:<br/>
+                        Implementation:<br/>
                         <a href="http://jan.brennenstuhl.me" title="Jan Brennenstuhl: Software, Web, Open Data">Jan Brennenstuhl</a>
+                        Mangled by <a href="http://zararah.net/">Zara Rahman</a><br/>
                     </p>
                 </div>
             </div>
