Update contact details and footer

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -34,7 +34,7 @@
             <header class="row-fluid social-media">
                 <ul>
                     <li>
-                        <a href="https://twitter.com/EnergyHackB">Twitter</a>
+                        <a href="https://twitter.com/OpenDevToolkit">Twitter</a>
                     </li>
                     <li>
                         <a href="{{ site.github }}">GitHub</a>
@@ -49,38 +49,43 @@
         <footer class="color1">
             <div class="container">
              <div class="row-fluid">
-                <div class="span9">
+                <div class="span4">
                     <div class="row-fluid">
-                        <h5>Ein Projekt von:</h5>
+                        <h5>A project of:</h5>
                     </div>
                     <div class="row-fluid">
-                        <div class="span3">
+                        <div class="span6">
                             <a href="http://okfn.de">
                                 <img src="/img/OKF_logo.png" alt="Open Knowledge Foundation Deutschland" />
                             </a>
                         </div>
                         <div class="span3">
-                            <a href="http://www.stromnetz-berlin.de/de/index.htm">
-                                <img src="/img/SB_logo1.png" alt="Stromnetz Berlin" />
-                            </a>
+                            <!-- <a href="http://www.stromnetz-berlin.de/de/index.htm"> -->
+                                <!-- <img src="/img/SB_logo1.png" alt="Stromnetz Berlin" /> -->
+                            <!-- </a> -->
                         </div>
-                       
+                    </div>
+               </div>
+
                    
                         
                     
                 
-                <div class="span3 contact-area">
+                <div class="span4 contact-area">
                     <p>
                         <a href="mailto:{{ site.contact }}">Contact</a><br/>
-                        <a href="mailto:{{ site.contact }}">Get involved/a><br/>
+                        <a href="mailto:{{ site.contact }}">Get involved</a><br/>
                         <a href="{{ site.github }}">Fork on Github</a>
                     </p>
+
+                </div>
                 
+                <div class="span4 contact-area">
                     <p>
                         Design:<br/>
                         <a href="http://rainbow-unicorn.com/">Rainbow-Unicorn.com</a><br/>
                         Implementation:<br/>
-                        <a href="http://jan.brennenstuhl.me" title="Jan Brennenstuhl: Software, Web, Open Data">Jan Brennenstuhl</a>
+                        <a href="http://jan.brennenstuhl.me" title="Jan Brennenstuhl: Software, Web, Open Data">Jan Brennenstuhl</a><br/>
                         Mangled by <a href="http://zararah.net/">Zara Rahman</a><br/>
                     </p>
                 </div>
