--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -44,7 +44,7 @@
             <section>
                 {{ content }}
             </section>
-            <button onClick="switchStyleSheet()" id="switch" class="visible-desktop"></button>
+            <!-- <button onClick="switchStyleSheet()" id="switch" class="visible-desktop"></button> -->
         </div>
         <footer class="color1">
             <div class="container">
@@ -56,7 +56,7 @@
                     <div class="row-fluid">
                         <div class="span6">
                             <a href="http://okfn.de">
-                                <img src="/img/OKF_logo.png" alt="Open Knowledge Foundation Deutschland" />
+                                <img src="img/OKF_logo.png" alt="Open Knowledge Foundation Deutschland" />
                             </a>
                         </div>
                         <div class="span3">
