--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
         <h4>How is the Open Development Toolkit funded?</h4>
      	<p>Initial funding is 50% provided by the Open Knowledge Foundation, and 50% from Development Initiatives. We're looking for funds to develop the new tools, training material and carrying out workshops with groups of potential data users. If you're interested in finding out more, please get in touch with Zara Rahman, Project Lead, on zara.rahman@okfn.org </p>
      	<br>
-     	<p>If you have any other questions, please don't hesitate to get in touch!</p>
+     	<p>If you have any other questions, please don't hesitate to <a href="mailto:zara.rahman@okfn.org.">get in touch!</a></strong></p>
 
 
 </div>
