--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -56,7 +56,7 @@
                     <div class="row-fluid">
                         <div class="span6">
                             <a href="http://okfn.de">
-                                <img src="img/OKF_logo.png" alt="Open Knowledge Foundation Deutschland" />
+                                <img src="img/OKF_logo.png" alt="Open Knowledge Foundation" />
                             </a>
                         </div>
                         <div class="span3">
