--- a/css/main.css
+++ b/css/main.css
@@ -335,9 +335,9 @@ p {
     padding: 20px 0 0 0;
     margin-bottom: 50px;
 }
-#about a:after {
-    content: " >";
-}
+/*#about a:after {*/
+    /*content: " >";*/
+/*}*/
 #map {
     height: 350px;
     margin-top: 10px;
