--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,11 +6,19 @@
 <div id="about" class="row-fluid color2">
     <div class="span12">
         <h4>Will the toolkit have a specific focus?</h4>
-        <p>As there's already lots of open data around the aid sector, thanks to the <a href="http://iatistandard.org/">International Aid Transparency Initiative (IATI)</a> there will be an initial focus on curating already existing tools which use IATI data, creating training materials around them, and carrying out a scoping analysis to see if there are any gaps in tools. We plan to create open source, interoperable tools to fill these potential gaps, building upon the great tools that are already available. We'll be talking to potential users of aid data to see what features they would like to see, and how best to design the Toolkit hub around their needs. The outline of the project will be very iterative, based upon user responses and needs throughout the project lifetime. 
-        It's planned that in the future, other aspects of open development data will also be focused upon - election data, sanitation, or education data for example. 
+        <p>As there's already lots of open data around the aid sector, thanks to the <a href="http://iatistandard.org/">International Aid Transparency Initiative (IATI)</a> there will be an initial focus on the aid sector, specifically on making it as easy as possible for anyone to access and understand open aid data. It is envisioned that in the future, other aspects of open development data will also be included - election data, sanitation data, or education data for example.</p>
 
-        <h4>How is the Open Development Toolkit funded?</h4>
-     	<p>Initial funding is 50% provided by the Open Knowledge Foundation, and 50% from Development Initiatives. We're looking for funds to develop the new tools, training material and carrying out workshops with groups of potential data users. If you're interested in finding out more, please get in touch with Zara Rahman, Project Lead, on <a href="mailto:zara.rahman@okfn.org.">zara.rahman@okfn.org</a></p>
+        <h4>What is the aim of the project?</h4>
+        <p>To make development data accessible to the non-expert. Although there is currently more open data than ever before, data availability is not the same as data accessibility; with this project, we want to empower people to really use and make sense of data that is relevant to poverty reduction. We hope that this will help citizens of aid-receiving countries to hold aid donor organisations and governments accountable for their projects, and aid practitioners from around the world to use data to inform their work. 
+
+        <h4>What is the project plan? </h4>
+         <p>The project will be very much based upon user needs - so, a first step will be talking to experts within the sector, as well as potential users who might not be making the most of aid data quite yet. We'll be creating training materials around existing tools, and where possible, building interoperable, open source modules to mix them with other relevant open data sets. We hope many of the ideas for how to develop the project will come from you, the community!</p>
+
+         <h4>How will this be any different to other existing IATI data portals?</h4>
+         <p>It won't be a data portal - it will be a consolidated set of resources and training documentation (some of which already exist!), a 'hub' of open development data. There'll be a strong focus on making sure that people are really using the data that is out there- the 'demand side' of the open data ecosystem, by providing easy to understand training materials, holding workshops, and getting in touch with people who are in a position to pass on those skills to others. The training materials will be written as part of <a href="https://schoolofdata.org">School of Data</a>- for an example of the style, check out <a href="http://schoolofdata.org/courses/">the courses they've written already</a>.</p>
+
+         <h4>How is the Open Development Toolkit funded?</h4>
+     	<p>Initial funding is 50% provided by the Open Knowledge Foundation, and 50% by Development Initiatives. We're currently looking for funds to develop different aspects of the project; for example, software development of the new open source tools, training material and carrying out workshops with groups of potential data users. If you're interested in finding out more, please get in touch with Zara Rahman on <a href="mailto:zara.rahman@okfn.org">zara.rahman@okfn.org</a></p>
      	<br>
      	<p>If you have any other questions, please don't hesitate to <a href="mailto:zara.rahman@okfn.org.">get in touch!</a></p>
 
