Change hyperlink of OKF logo and edit about.html

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="row-fluid">
                         <div class="span6">
-                            <a href="http://okfn.de">
+                            <a href="http://okfn.org">
                                 <img src="img/OKF_logo.png" alt="Open Knowledge Foundation" />
                             </a>
                         </div>
