Change font and background image

--- a/css/day.css
+++ b/css/day.css
@@ -3,7 +3,7 @@
  */
 
 body {
-    background-image: url('../img/EH_day.jpg');
+    background-image: url('../img/gears_new.png');
     background-repeat: repeat;
     background-position: top left;
 }
