--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ ul {
 }
 .social-media li a {
     padding: 2px 20px;
-    background: #FFEC00;
+    background: #EFEFEF;
     font-size: 1.2em;
     color: #3D3D3F;
     text-decoration: none;
@@ -151,7 +151,6 @@ ul {
     margin: 0;
     font-size: 3em;
     padding: 0px 0px 20px;
-    text-transform: uppercase;
     line-height: 1em;
     text-align: center;
     font-weight: normal;
@@ -169,7 +168,7 @@ ul {
 
 blockquote {
     text-transform: uppercase;
-    font-size: 1.5em;
+    font-size: 1.3em;
     padding: 20px 30px 0;
     border: none;
     line-height: 1em;
@@ -235,8 +234,8 @@ h6 {
 }
 
 p {
-    padding: 0 20px 20px 20px;
-    font-size: 1.5em;
+    padding: 20px 20px 20px 20px;
+    font-size: 1.2em;
 }
 
 .contact-area {
@@ -297,7 +296,7 @@ p {
 }
 #about, #video {
     padding: 20px 0 0 0;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 /*#about a:after {*/
     /*content: " >";*/
