--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -43,7 +43,7 @@
             </section>
             <!-- <button onClick="switchStyleSheet()" id="switch" class="visible-desktop"></button> -->
         </div>
-        <footer class="color1">
+        <footer class="color3">
             <div class="container">
              <div class="row-fluid">
                 <div class="span4">
@@ -53,7 +53,7 @@
                     <div class="row-fluid">
                         <div class="span6">
                             <a href="http://okfn.org">
-                                <img src="img/OKF_logo.png" alt="Open Knowledge Foundation" />
+                                <img src="http://assets.okfn.org/p/okfn/img/okfn-logo-landscape.png" alt="Open Knowledge Foundation" />
                             </a>
                         </div>
                         <div class="span3">
