--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,11 +5,15 @@
 </div>
 <div id="about" class="row-fluid color2">
     <div class="span12">
-        <h4>Will the toolkit have a specific focus?</h4>
-        <p>As there's already lots of open data around the aid sector, thanks to the <a href="http://iatistandard.org/">International Aid Transparency Initiative (IATI)</a> there will be an initial focus on the aid sector, specifically on making it as easy as possible for anyone to access and understand open aid data. It is envisioned that in the future, other aspects of open development data will also be included - election data, sanitation data, or education data for example.</p>
+        <h4>What is 'open development'?</h4>
+        <p>Open Development sits at the intersection of the 'open' movement, and international development. This could take the form of looking at how open data can affect decisions made within international development; open access to research materials; or opening up the ways we work, for example by being more inclusive, to name just a few examples. 
+        If you want to find out more about open development, join the <a href="https://lists.okfn.org/mailman/listinfo/open-development/">Open Development mailing list</a>, where a wide range of topics within Open Development are discussed. It's open to everyone to join! 
 
         <h4>What is the aim of the project?</h4>
         <p>To see development data used and useful. Although there is currently more open data than ever before, data availability is not the same as data accessibility; with this project, we want to empower people to really use and make sense of data that is relevant to poverty reduction. We hope that this will help citizens of aid-receiving countries to hold aid donor organisations and governments accountable for their projects, and aid practitioners from around the world to use data to inform their work.
+
+        <h4>Will the toolkit have a specific focus?</h4>
+        <p>As there's already lots of open data around the aid sector, thanks to the <a href="http://iatistandard.org/">International Aid Transparency Initiative (IATI)</a> there will be an initial focus on the aid sector, specifically on making it as easy as possible for anyone to access and understand open aid data. It is envisioned that in the future, other aspects of open development data will also be included - election data, sanitation data, or education data for example.</p>
 
         <h4>What is the project plan? </h4>
          <p>The project will be very much based upon user needs - so, a first step will be talking to experts within the sector, as well as potential users who might not be making the most of aid data quite yet. We'll be creating training materials around existing tools, and where possible, building interoperable, open source modules to mix them with other relevant open data sets. We hope many of the ideas for how to develop the project will come from you, the community!</p>
