Add correct landscape image; modify site credits

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -79,10 +79,7 @@
                 
                 <div class="span4 contact-area">
                     <p>
-                        Design:<br/>
-                        <a href="http://rainbow-unicorn.com/">Rainbow-Unicorn.com</a><br/>
-                        Implementation:<br/>
-                        <a href="http://jan.brennenstuhl.me" title="Jan Brennenstuhl: Software, Web, Open Data">Jan Brennenstuhl</a><br/>
+                        Site design forked from <a href="http://energyhack.de">EnergyHack</a><br/>
                         Mangled by <a href="http://zararah.net/">Zara Rahman</a><br/>
                     </p>
                 </div>
