Modify OKF logo in footer

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -53,7 +53,7 @@
                     <div class="row-fluid">
                         <div class="span6">
                             <a href="http://okfn.org">
-                                <img src="http://assets.okfn.org/p/okfn/img/okfn-logo-landscape.png" alt="Open Knowledge Foundation" />
+                                <img src="/img/okfn-landscape-black.png" alt="Open Knowledge Foundation" />
                             </a>
                         </div>
                         <div class="span3">
