Add devinit logo to footer

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -56,13 +56,14 @@
                                 <img src="/img/okfn-landscape-black.png" alt="Open Knowledge Foundation" />
                             </a>
                         </div>
-                        <div class="span3">
-                            <!-- <a href="http://www.stromnetz-berlin.de/de/index.htm"> -->
-                                <!-- <img src="/img/SB_logo1.png" alt="Stromnetz Berlin" /> -->
-                            <!-- </a> -->
-                        </div>
+                        <!-- <div class="span6"> -->
+                            <a href="http://devinit.org">
+                                <img src="/img/devinitlogo.png" alt="Development Initiatives" /> 
+                            </a> 
+                        </div> 
                     </div>
                </div>
+            </div>
 
                    
                         
