--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,15 @@ margin-bottom: 50px	 !important;
     padding-bottom: 0;
 }
 
+.post h1 {
+    padding-left: 20px;
+    padding-top: 10px;
+}
+
+.post .prearticle {
+    margin-left: 20px;
+}
+
 .bulletlist {
 list-style-type: square;
 font-size: 1.5em;
