Uncomment postsandresources.html

--- a/_includes/postsandresources.html
+++ b/_includes/postsandresources.html
@@ -1,4 +1,4 @@
-<!-- <div id="challenges" class="row-fluid">
+<div id="challenges" class="row-fluid">
     <div class="span6 color3">
         <div class="heading color1">Posts:<br /></div>
         <ul>
@@ -22,4 +22,3 @@
         </ul>
     </div>
 </div>
- -->
