Add blog and resources section

--- a/_includes/postsandresources.html
+++ b/_includes/postsandresources.html
@@ -1,6 +1,6 @@
-<!-- <div id="challenges" class="row-fluid">
+<div id="challenges" class="row-fluid">
     <div class="span6 color3">
-        <div class="heading color1">Posts:<br /></div>
+        <div class="heading color1">Blog posts:<br /></div>
         <ul>
           {% for post in site.posts %}
             <li>
@@ -10,7 +10,7 @@
         </ul>
     </div>
     <div class="span6 color3">
-        <div class="heading color1">Resources:<br /></div>
+        <div class="heading color1">Online resources:<br /></div>
         <ul>
           {% for resource in site.pages %}
             {% if resource.isresource == true %}
@@ -21,4 +21,4 @@
           {% endfor %}
         </ul>
     </div>
-</div> -->
+</div>
