--- a/_layouts/resource.html
+++ b/_layouts/resource.html
@@ -2,20 +2,25 @@
 layout: base
 type: resource
 ---
+<header class="row-fluid navigation">
+    <ul>
+      <li class="post-home color1"><a href="/">Home</a></li>
+    </ul>
+</header>
+<section>
 
-<div class="row-fluid color3 post">
-    <div class="span12">
-        <main>
-          <header>
+  <div class="row-fluid color3 post">
+      <div class="span12">
+          <main>
+            <header>
 
-            <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
+              <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
 
-          </header>
-          <article>
-            <span class="prearticle">
+            </header>
+            <article>
               {{ content }}
-          </article>
-        </main>
-    </div>
-</div>
-
+            </article>
+          </main>
+      </div>
+  </div>
+</section>
