--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,7 @@ body {
 
 }
 ul {
-    list-style: none;
+    list-style: circle;
 }
 #quotes .row-fluid:first-child {
     margin-bottom: 20px;
@@ -130,6 +130,25 @@ ul {
 .social-media li a:hover {
     text-decoration: none;
 }
+.navigation {
+    margin: 0;
+}
+
+.navigation li {
+    float: right;
+    margin: 0 0 10px 10px;
+}
+.navigation li a {
+    padding: 0px 0px;
+    background: #2C4C9C;
+    font-size: 1.2em;
+    color: #FFF;
+    text-decoration: none;
+
+}
+.navigation li a:hover {
+    text-decoration: none;
+}
 #teaser {
     margin: 0 0 50px 0;
 }
@@ -150,7 +169,7 @@ ul {
 #teaser h2 {
     margin: 0;
     font-size: 3em;
-    padding: 0px 0px 20px;
+    padding: 20px 0px 20px;
     line-height: 1em;
     text-align: center;
     font-weight: normal;
@@ -158,12 +177,21 @@ ul {
 }
 #teaser h3 {
     margin: 0;
-    font-size: 7em;
+    font-size: 1.5em;
     text-transform: uppercase;
-    padding: 0 0 15px;
-    line-height: 0.8em;
+    padding: 20px 0 20px;
+    line-height: 1em;
     text-align: center;
     font-weight: normal;
+    }
+
+.post h3 {
+    margin: 0;
+    font-size: 1.7em;
+    padding: 20px 20px 20px;
+    line-height: 1em;
+    text-align: left;
+    font-weight: bold;
     }
 
 blockquote {
@@ -219,7 +247,7 @@ margin-bottom: 50px	 !important;
 }
 
 .bulletlist {
-list-style-type: square;
+list-style-type: circle;
 font-size: 1.5em;
 padding: 0 20px;
 }
@@ -254,6 +282,12 @@ h6 {
 p {
     padding: 20px 20px 20px 20px;
     font-size: 1.2em;
+}
+
+li {
+    padding: 10px 20px 10px 20px;
+    font-size: 1.2em;
+    line-height: 1.4em;
 }
 
 .contact-area {
