--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -41,13 +41,12 @@
              <div class="row-fluid">
                 <div class="span4">
                     <div class="row-fluid">
-                        <h5>A project of:</h5>
+                        <h6>A project of:</h6>
                     </div>
                     <div class="row-fluid">
-                        <div class="span6">
+                        <div class="span10">
                             <a href="http://okfn.org">
                                 <img src="/img/okfn-landscape-black.png" alt="Open Knowledge Foundation" />
-                            </a>
                         </div>
                         <div class="span3">
                             <!-- <a href="http://www.stromnetz-berlin.de/de/index.htm"> -->
@@ -60,18 +59,20 @@
 
 
 
-
-                <div class="span4 contact-area">
-                    <p>
-                        <a href="mailto:{{ site.contact }}">Contact</a><br/>
-                        <a href="mailto:{{ site.contact }}">Get involved</a><br/>
-                        <a href="{{ site.github }}">Fork on Github</a>
-                    </p>
+                 <div class="span4 contact-area">
+                            </a>
+                            <h6>  </h6>
+                                <a href="http://devinit.org/">
+                                <img src="/img/DIlogo.png" alt="Development Initiatives" />
+                            </a>
 
                 </div>
 
                 <div class="span4 contact-area">
                     <p>
+                        <a href="mailto:{{ site.contact }}">Contact</a><br/>
+                        <a href="mailto:{{ site.contact }}">Get involved</a><br/>
+                        <a href="{{ site.github }}">Fork on Github</a><br/>
                         Site design forked from <a href="http://energyhack.de">EnergyHack</a><br/>
                         Mangled by <a href="http://zararah.net/">Zara Rahman</a><br/>
                     </p>
