--- a/css/main.css
+++ b/css/main.css
@@ -195,11 +195,11 @@ ul {
     }
 
 blockquote {
-    text-transform: uppercase;
+    text-transform: normal;
     font-size: 1.3em;
     padding: 20px 30px 0;
     border: none;
-    line-height: 1em;
+    line-height: 1.3em;
 }
 blockquote:before {
     font-family: 'Arial', sans-serif;
