Remove init, resource page

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -26,7 +26,7 @@
 			<script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
 
 	</head>
-    <body style="zoom: 1;" onLoad="initialize()">
+    <body style="zoom: 1;">
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
