Add Font Awesome to header

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,7 +24,7 @@
 				<![endif]-->
 
 			<script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
-
+                 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 	</head>
     <body style="zoom: 1;">
         <!--[if lt IE 7]>
