--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,17 @@ img {
     vertical-align: middle;
 }
 
+.inlineleft {
+
+    float:left;
+    margin: 10px 10px 10px 0px;
+}
+
+.inlineright {
+
+    float:right;
+    margin: 10px 0px 10px 10px;
+}
 /*
  * Remove default fieldset styles.
  */
@@ -104,8 +115,8 @@ body {
 	max-width: 870px;
 
 }
-ul {
-    list-style: circle;
+li {
+    list-style: square;
 }
 #quotes .row-fluid:first-child {
     margin-bottom: 20px;
@@ -196,10 +207,10 @@ ul {
 
 blockquote {
     text-transform: normal;
-    font-size: 1.3em;
-    padding: 20px 30px 0;
+    font-size: 1em;
+    padding: 10px 20px 0;
     border: none;
-    line-height: 1.3em;
+    line-height: 1.5em;
 }
 blockquote:before {
     font-family: 'Arial', sans-serif;
@@ -247,9 +258,9 @@ margin-bottom: 50px	 !important;
 }
 
 .bulletlist {
-list-style-type: circle;
+list-style-type: square;
 font-size: 1.5em;
-padding: 0 20px;
+padding: 0 40px;
 }
 
 .bulletlist li {
@@ -280,7 +291,7 @@ h6 {
 }
 
 p {
-    padding: 20px 20px 20px 20px;
+    padding: 0px 20px 20px 40px;
     font-size: 1.2em;
 }
 
