Show unknown text as muted

--- a/css/main.css
+++ b/css/main.css
@@ -418,6 +418,10 @@ footer li {
     color: black;
 }
 
+.txt-muted {
+    color: #9e9e9f;
+}
+
 /* ==========================================================================
    Media Queries
    ========================================================================== */
