--- a/css/main.css
+++ b/css/main.css
@@ -199,7 +199,7 @@ li {
 .post h3 {
     margin: 0;
     font-size: 1.7em;
-    padding: 20px 20px 20px;
+    padding: 20px 20px 20px 40px;
     line-height: 1em;
     text-align: left;
     font-weight: bold;
