Move bullet points to 'inside'

--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,7 @@ body {
 }
 li {
     list-style: square;
+    list-style-position: inside;
 }
 #quotes .row-fluid:first-child {
     margin-bottom: 20px;
