--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -83,5 +83,14 @@
         <script>window.jQuery || document.write('<script src="{{ site.url }}/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
         <script src="{{ site.url }}/js/plugins.js"></script>
         <script src="{{ site.url }}/js/main.js"></script>
+        <script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	
+	  ga('create', 'UA-33874954-25', 'opendevtoolkit.net');
+	  ga('send', 'pageview');
+	</script>
     </body>
 </html>
