Fix GitHub URL after site.github context change

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -72,7 +72,7 @@
                     <p>
                         <a href="mailto:{{ site.contact }}">Contact</a><br/>
                         <a href="mailto:{{ site.contact }}">Get involved</a><br/>
-                        <a href="{{ site.github }}">Fork on Github</a><br/>
+                        <a href="{{ site.github.repository_url }}">Fork on Github</a><br/>
                         Site design forked from <a href="http://energyhack.de">EnergyHack</a><br/>
                         Mangled by <a href="http://zararah.net/">Zara Rahman</a><br/>
                     </p>
