--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -31,7 +31,7 @@
                  href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"
                  rel="stylesheet"> -->
 	</head>
-    <body style="zoom: 1;">
+    <body style="zoom: 1;" class="nospin">
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
